add tests in spring; add all in one module (spring); start logging; customize rest for query regex

--- a/rest/userEdit.html
+++ b/rest/userEdit.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>User</h1>
-    <form action="http://localhost:8080/user" method="post">
+    <form action="defpack.http://localhost:8080/user" method="post">
         <label>Name: </label>
         <input type="text" name="name"><br />
         <label>Password: </label>
